--- a/index.html
+++ b/index.html
@@ -5,14 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>poda poolu</title>
-    <style>
-        p{
-            margin-top: 100px;
-        }
-    </style>
+    <link rel="stylesheet" href="index.css">
+    
 </head>
 <body>
-    <p style="text-align: center;">OOOMBU <br> da punda</p>
+    <p>OOOMBU <br> da punda</p>
     
 </body>
 </html>
